<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:iconTintMode="screen"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_alarm_clock"
                android:icon="@drawable/ic_alarm_clock"
                android:title="@string/menu_reminder"/>
        <item
                android:id="@+id/nav_to_do_list"
                android:icon="@drawable/ic_to_do_list"
                android:title="@string/menu_to_do_list"/>
    </group>
</menu>