<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.serviceappjava.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_alarm_clock"
            android:name="com.example.serviceappjava.ui.reminder.ReminderFragment"
            android:label="@string/menu_reminder"
            tools:layout="@layout/fragment_reminder"/>

    <fragment
            android:id="@+id/nav_to_do_list"
            android:name="com.example.serviceappjava.ui.to_do_list.ToDoListFragment"
            android:label="@string/menu_to_do_list"
            tools:layout="@layout/fragment_to_do_list"
    />
</navigation>