<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.reminder.ReminderFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <com.sothree.slidinguppanel.SlidingUpPanelLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fitsSystemWindows="false"
            android:gravity="bottom">

        <LinearLayout

                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                android:paddingTop="50dp">


            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"

                    android:layout_height="wrap_content"
                    app:strokeWidth="0dp"
                    android:backgroundTint="?attr/colorTertiaryContainer">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/tip_icon"/>

                    <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tip"
                            android:layout_marginStart="8dp"
                            android:textColor="?attr/colorOnTertiaryContainer"
                            android:fontFamily="@font/custom_font"
                            />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="2dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="32dp"
                    app:helperText="Это действие будет добавлено в список напоминаний*"
                    app:helperTextTextColor="?attr/colorPrimary"
                    app:startIconDrawable="@drawable/action_icon"
                    app:startIconCheckable="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_action"
                        android:fontFamily="@font/custom_font"
                        android:id="@+id/et_action"/>

            </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/custom_font"
                    android:paddingStart="48dp"
                    android:paddingEnd="48dp"
                    android:text="@string/add_reminder"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="32dp"
                    android:id="@+id/btn_add_reminder"
            />

        </LinearLayout>
        
        
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@drawable/background_slide_up"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/arrow_up"/>


            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:id="@+id/card_tip"
                    android:layout_height="wrap_content"
                    app:strokeWidth="0dp"
                    android:backgroundTint="?attr/colorTertiaryContainer">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/empty_list"
                            android:textSize="18sp"
                            android:layout_marginStart="8dp"
                            android:textColor="?attr/colorOnTertiaryContainer"
                            android:fontFamily="@font/custom_font"
                    />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/reminder_recycler"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/reminder_item"
                    android:orientation="vertical"/>

        </LinearLayout>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
    
    
</androidx.constraintlayout.widget.ConstraintLayout>


