<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">


    <com.google.android.material.textview.MaterialTextView
            tools:text="Шаги"
            android:fontFamily="@font/custom_font"
            android:gravity="center"
            android:textSize="@dimen/base_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_steps"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="80dp"
    />

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/card_tip"
            app:layout_constraintTop_toBottomOf="@+id/circular_pb"
            app:strokeWidth="0dp"
            app:layout_constraintBottom_toTopOf="@id/card_buttons"
            android:backgroundTint="?attr/colorTertiaryContainer"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="@+id/card_buttons"
            app:layout_constraintStart_toStartOf="@+id/card_buttons">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:padding="5dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/steps"
            />



            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/aurrent_aim"
                    android:gravity="center"
                    android:id="@+id/tv_aim"
                    tools:text="Текущая цель: 50000 шагов"
                    android:textColor="?attr/colorOnTertiaryContainer"
                    android:fontFamily="@font/custom_font"
                    android:textSize="16sp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:cardElevation="2dp"
            android:elevation="10dp"
            app:strokeWidth="0dp"
            app:cardCornerRadius="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/card_buttons"
            app:layout_constraintTop_toBottomOf="@+id/card_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                    android:text="@string/reset_steps"
                    android:fontFamily="@font/custom_font"
                    style="@style/Widget.Service_App.ButtonRoundedCorners"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn_reset_steps"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btn_change_max"
                    app:layout_constraintStart_toStartOf="@+id/btn_change_max"
                    app:layout_constraintEnd_toEndOf="@+id/btn_change_max"
            />

            <com.google.android.material.button.MaterialButton
                    android:text="@string/change_max"
                    android:fontFamily="@font/custom_font"
                    android:layout_marginTop="60dp"
                    style="@style/Widget.Service_App.SecondButtonRoundedCorners"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn_change_max"
                    app:layout_constraintTop_toBottomOf="@+id/btn_reset_steps" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.497"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/circular_pb"
            app:cpb_background_progressbar_width="15dp"
            app:cpb_progressbar_width="20dp"
            app:cpb_progress_max="5000"
            app:cpb_progress="1000"
            app:cpb_background_progressbar_color="?attr/colorOnSecondary"
            app:cpb_progressbar_color="?attr/colorPrimary"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="@+id/tv_steps" app:layout_constraintEnd_toEndOf="@+id/tv_steps"
            app:layout_constraintStart_toStartOf="@+id/tv_steps"
            app:layout_constraintBottom_toBottomOf="@+id/tv_steps" app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintVertical_bias="0.505"/>

</androidx.constraintlayout.widget.ConstraintLayout>